--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "rimraf": "2.5.2"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "mongoose": "^4.5.4",
     "normalize.css": "^4.1.1"
   }
 }
